# lake_graphics_framework

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/dev/: example_usage_plan.txt  file_structure_example.txt  loader.txt
src/lake_graphics_framework/: __init__.py
src/lake_graphics_framework/_message_logger/: __init__.py  _message_logger.py
src/lake_graphics_framework/_src/_global_exceptions/: __init__.py  _global_exceptions.py
src/lake_graphics_framework/_src/_global_type_hinting/: __init__.py  _type_hints.py
src/lake_graphics_framework/_variable_validation/: __init__.py  _variable_validation.py
src/lake_graphics_framework/message_logger/: __init__.py  logger.py  message_logger.py
src/lake_graphics_framework/window/: __init__.py  _event_handler.py  window.py
tests/: test_logger.py  test_variable_validation.py
